2008-04-21  Timothy Hatcher  <timothy@apple.com>

        Adds the ability to enter multi-line commands in the console by holding the
        alt/option key when pressing enter/return.

        https://bugs.webkit.org/show_bug.cgi?id=18454

        Reviewed by Darin Adler.

        * page/inspector/Console.js:
        (WebInspector.Console.prototype._enterKeyPressed): Return early if the
        alt/option key is held when enter is pressed.
        * page/inspector/inspector.css:
        (.console-message-text): Added. Set white-space: pre-wrap.

2008-04-21  Timothy Hatcher  <timothy@apple.com>

        Fixes the bug where the Database table names do not update when
        running the CREATE TABLE or DROP TABLE queries. Also makes the
        table names update every time the database is collapsed and expanded.

        https://bugs.webkit.org/show_bug.cgi?id=18453

        Reviewed by Darin Adler.

        * page/inspector/DatabasesPanel.js:
        (WebInspector.DatabasesPanel.prototype.updateDatabaseTables):
        Set shouldRefreshChildren to true on the Database's tree element.
        The refreshChildren property was renamed to shouldRefreshChildren.
        (WebInspector.DatabaseSidebarTreeElement.prototype.oncollapse):
        Request a refresh after every collapse so the next expand will
        have an updated table list.

2008-04-21  Timothy Hatcher  <timothy@apple.com>

        Adds INDEX to the list of completion words for the Databases query view.

        https://bugs.webkit.org/show_bug.cgi?id=18452

        Reviewed by Darin Adler.

        * page/inspector/DatabaseQueryView.js:
        (WebInspector.DatabaseQueryView.prototype.completions): Split up "CREATE TABLE "
        and "DROP TABLE " into "CREATE ", "DROP ", "TABLE ". And added "INDEX ".

2008-04-21  Timothy Hatcher  <timothy@apple.com>

        Adds the UI portions of the Scripts panel to the Web Inspector.
        The Scripts panel has not been added to the toolbar yet.
